Fix: Height on mobile browser.

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,10 @@ body {
 }
 
 #map {
-    height: 100vh; 
+    height: 100vh;
+    height: -webkit-fill-available;
+    height: -moz-fill-available;
+    height: fill-available;
 }
 
 #map-selector {
